--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         <input type="text" id="pantalla">
 
         <div class="botones">
-            <button onclick="limpiar()">C</button>
-            <button onclick="agregar('/')">÷</button>
-            <button onclick="agregar('*')">x</button>
-            <button onclick="agregar('-')">-</button>
+            <button class="limpiar" onclick="limpiar()">C</button>
+            <button class="dividir" onclick="agregar('/')">÷</button>
+            <button class="multiplicar"onclick="agregar('*')">x</button>
+            <button class="menos" onclick="agregar('-')">-</button>
 
             <button onclick="agregar('7')">7</button>
             <button onclick="agregar('8')">8</button>
             <button onclick="agregar('9')">9</button>
-            <button onclick="agregar('+')">+</button>
+            <button class="sumar" onclick="agregar('+')">+</button>
 
             <button onclick="agregar('4')">4</button>
             <button onclick="agregar('5')">5</button>
             <button onclick="agregar('6')">6</button>
-            <button onclick="calcular()">=</button>
+            <button class="igual"  onclick="calcular()">=</button>
 
             <button onclick="agregar('1')">1</button>
             <button onclick="agregar('2')">2</button>
